# pyi2em

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
examples/: compare_nmm3d_i2em.ipynb
src/: em_i2em.cpp  em_i2em.h  main.cpp
tests/: test_backscatter.py  test_crosspol.py
